# AiCraft

./: .gitignore  .gitmodules  00_OVERVIEW.md  01_WORLD.md  02_OBJECTS.md  03_ACTIONS.md  04_SERVER.md  05_CLIENT.md  06_NETWORKING.md  07_PLAYER_CODING.md  08_BUILTIN_CONTENT.md  09_CORE_LOOP.md  12_FEASIBILITY.md  13_MILESTONE_1.md  14_ARCHITECTURE_DIAGRAM.md  15_BLOCK_AND_ENTITY_MODEL.md  16_ARTIFACT_REGISTRY_TODO.md  17_RESOURCE_GUIDE.md  18_WEB_CLIENT.md  19_OBJECT_MODEL.md  21_BEHAVIOR_API.md  CLAUDE.md  CMakeLists.txt  DEBUGGING.md  Makefile  camera_modes.md  handbook_features.md  imgui.ini  vk_remaining_plan.md  vulkan_migration.md
characters/: __init__.py  base.py  blue_knight.py  crewmate.py  giant.py  purple_mage.py  skeleton.py
config/: controls.yaml
docs/: 00_OVERVIEW.md  01_WORLD.md  02_OBJECTS.md  03_ACTIONS.md  04_SERVER.md  05_CLIENT.md  06_NETWORKING.md  07_PLAYER_CODING.md  08_BUILTIN_CONTENT.md  09_CORE_LOOP.md  12_FEASIBILITY.md  13_MILESTONE_1.md  14_ARCHITECTURE_DIAGRAM.md  15_BLOCK_AND_ENTITY_MODEL.md  16_ARTIFACT_REGISTRY_TODO.md  17_RESOURCE_GUIDE.md  18_WEB_CLIENT.md  19_OBJECT_MODEL.md  21_BEHAVIOR_API.md  22_BEHAVIORS.md  22_BEHAVIORS_DEFINITION.md  23_BEHAVIOR_TREE_TUTORIAL.md  24_COMMON_PITFALLS.md  25_MULTI_BLOCK_OBJECTS.md  26_TERASOLOGY_COMPARISON.md  27_NETWORK_PERF_PLAN.md  28_MATERIAL_VALUE.md  29_CHUNK_INFO.md  30_INVENTORY_MANAGEMENT.md  99_todo.md  CEF_LEGACY_CLEANUP.md  CEF_UI.md  CEF_UI_PLAN.md  MODEL_PIPELINE.md  PYTHON_EVERYTHING.md  VOXEL_EARTH.md
music/: .gitignore  README.md  README_sources.md  harvest_incompetech.py  harvest_oga.py  jukebox.py  manifest_incompetech.csv  manifest_oga.csv  (+1 more)
src/CellCraft/: CMakeLists.txt  Makefile  README.md  main.cpp
src/CellCraft/artifacts/monsters/base/: kid_starters.h  prebuilt.h  starters.h
src/CellCraft/client/: ambient_particles.cpp  ambient_particles.h  app.cpp  app.h  app_state.h  background_layer.cpp  background_layer.h  cell_fill_renderer.cpp  cell_fill_renderer.h  chalk_renderer.cpp  chalk_renderer.h  chalk_stroke.h  creature_lab.cpp  creature_lab.h  game_log.cpp  game_log.h  kid_lab.cpp  kid_lab.h  lab_gizmo.cpp  lab_gizmo.h  lab_screen.cpp  lab_screen.h  name_generator.cpp  name_generator.h  part_render.cpp  part_render.h  post_fx.cpp  post_fx.h  screen_shake.cpp  screen_shake.h  sdf_font.cpp  sdf_font.h  ui_anim.h  ui_button.h  ui_modern.cpp  ui_modern.h  ui_particles.h  ui_text.h  ui_theme.h
src/CellCraft/docs/: 00_OVERVIEW.md
src/CellCraft/godot/: project.godot
src/CellCraft/godot/.godot/editor/: filesystem_cache8
src/CellCraft/godot/scenes/: client.tscn
src/CellCraft/godot/scripts/client/: drawing_canvas.gd
src/CellCraft/godot/scripts/shared/: chalk_stroke.gd
src/CellCraft/shaders/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  board.frag  cell_body.frag  cell_body.vert  chalk.frag  postfx.vert  text_modern.frag  text_modern.vert
src/CellCraft/sim/: action.h  monster.h  part.h  part_stats.h  plate.h  polygon_util.h  radial_cell.h  shape_smooth.h  shape_validate.h  sim.cpp  sim.h  symmetric_body.h  tuning.h  world.h
src/CellCraft/tests/: sim_test.cpp
src/CellCraft/web/: README.md  index.html  measure_fps.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/CellCraft/web/server/: package-lock.json  package.json  tsconfig.json
src/CellCraft/web/server/src/: game_server.ts  main.ts
src/CellCraft/web/src/: main.ts  perf.ts
src/CellCraft/web/src/ai/: simple_ai.ts
src/CellCraft/web/src/artifacts/: index.ts  registry.ts  spawn.ts  types.ts
src/CellCraft/web/src/artifacts/behaviors/: base.ts
src/CellCraft/web/src/artifacts/monsters/: base.ts
src/CellCraft/web/src/artifacts/parts/: base.ts
src/CellCraft/web/src/input/: input.ts
src/CellCraft/web/src/net/: client.ts  protocol.ts
src/CellCraft/web/src/render/: board_material.ts  cell_fill_material.ts  chalk_material.ts  ocean_material.ts  post_fx.ts  renderer.ts  transitions.ts  troika.d.ts  ui.ts
src/CellCraft/web/src/scenes/: end_scene.ts  main_menu_scene.ts  match_scene.ts  menu_widgets.ts  scene.ts  scene_manager.ts  starter_select_scene.ts  tier_up_scene.ts
src/CellCraft/web/src/sim/: action.ts  monster.ts  part.ts  sim.ts  tuning.ts  vec2.ts  world.ts
src/CellCraft/web/src/sim/__tests__/: artifacts.test.ts  sim.test.ts
src/EvoCraft/: CMakeLists.txt  Makefile  README.md
src/EvoCraft/artifacts/species/: _common.py  dodger.py  seeker.py  wanderer.py
src/EvoCraft/docs/: 00_PLAN.md  VISUAL_PLAN.md
src/EvoCraft/docs/artifacts/: M1_RESULT.md
src/EvoCraft/godot/: project.godot
src/EvoCraft/godot/scenes/: main.tscn
src/EvoCraft/godot/scripts/: local_sim.gd  world_builder.gd
src/EvoCraft/godot/shaders/: caustics.gdshader  cell.gdshader  coral.gdshader  food.gdshader  kelp.gdshader  microbe.gdshader  petri.gdshader  water_surface.gdshader
src/EvoCraft/server/: main.cpp  net_protocol.h  net_server.h  part_table.h  python_bridge.cpp  python_bridge.h  sim.h  swim_slab.h
src/LifeCraft/: CMakeLists.txt  Makefile  main.cpp
src/LifeCraft/artifacts/monsters/base/: prebuilt.h
src/LifeCraft/client/: app.cpp  app.h  app_state.h  chalk_renderer.cpp  chalk_renderer.h  chalk_stroke.h  game_log.cpp  game_log.h  lab_screen.cpp  lab_screen.h  part_render.cpp  part_render.h
src/LifeCraft/docs/: 00_OVERVIEW.md
src/LifeCraft/godot/: project.godot
src/LifeCraft/godot/.godot/: global_script_class_cache.cfg
src/LifeCraft/godot/.godot/editor/: client.tscn-folding-254ce6fc3544830b695100790197cb32.cfg  project_metadata.cfg
src/LifeCraft/godot/.godot/imported/: paper.png-ad248675822b8b98986bd7366a6ce403.ctex  paper.png-ad248675822b8b98986bd7366a6ce403.md5
src/LifeCraft/godot/scenes/: client.tscn
src/LifeCraft/godot/scripts/client/: drawing_canvas.gd
src/LifeCraft/godot/scripts/shared/: chalk_stroke.gd
src/LifeCraft/shaders/: board.frag  board.vert  chalk.frag  chalk.vert
src/LifeCraft/sim/: action.h  monster.h  part.h  part_stats.h  polygon_util.h  shape_smooth.h  shape_validate.h  sim.cpp  sim.h  tuning.h  world.h
src/LifeCraft/tests/: sim_test.cpp
(+1805 files in other folders)
